pizzeria-application/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pizzeria-application
spec:
  hosts:
    - "cloud.baloise.dev"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /pizzeria/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: pizzeria-application
            port:
              number: 8080
